# showMe

./: .gitignore  .mailmap  .pre-commit-config.yaml  BOT_AUDIT_REPORT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FIX_CONTRACT.md  LICENSE  ORIGINAL_REQUEST.md  PROGRESS-PAGES.md  PROJECT.md  README.md  REBUILD_2026_05_25.md  SECURITY.md  package-lock.json  package.json  progress.md
backend/: SHIPPED_ALL.md  SUBSYSTEM_A.md  SUBSYSTEM_B.md  SUBSYSTEM_C.md  SUBSYSTEM_D.md  SUBSYSTEM_E.md  SUBSYSTEM_F.md  SUBSYSTEM_G.md  SUBSYSTEM_H.md  SUBSYSTEM_I.md  SUBSYSTEM_J.md  SUBSYSTEM_K.md  exchanges.temp.yml  pyproject.toml  showme-backend.spec
backend/config/: default.yaml
backend/scripts/: build_exchange_catalog.py
backend/showme/: __init__.py  app_paths.py  chart_history.py  crypto_aliases.py  finbert_analyzer.py  function_contracts.py  llm.py  logging_setup.py  migration.py  mis.py  persistence_helpers.py  portfolio_aggregate.py  quotes.py  scanner.py  server.py  state_api.py  streams.py  veryfinder_bridge.py  whisper_analyzer.py  x_analysis.py  x_spontaneous.py
backend/showme/agents/: __init__.py  orchestrator.py  search.py
backend/showme/analytical/: __init__.py  audit.py  cache.py  duck.py  frames.py  snapshots.py
backend/showme/assistant/: parser.py
backend/showme/bots/: lifespan.py  ohlcv.py  performance.py  record.py  runner.py  store.py
backend/showme/brokers/: __init__.py  alpaca.py  base.py  ccxt_broker.py  credential_store.py  factory.py
backend/showme/brokers/catalog/: exchanges.yml  loader.py
backend/showme/engine/: main.py
backend/showme/engine/agents/: __init__.py  code.py  execution.py  llm_router.py  news.py  orchestrator.py  planner.py  risk.py  search.py  summarizer.py  viz.py
backend/showme/engine/api/: binance_client.py
backend/showme/engine/assets/: __init__.py
backend/showme/engine/consensus/: engine.py  risk.py  scorer.py
backend/showme/engine/control/: config_watcher.py  symbol_controller.py
backend/showme/engine/core/: __init__.py  accounting_taxonomy.py  base_agent.py  base_asset_class.py  base_data_source.py  base_function.py  broker.py  data_router.py  instrument.py  quote.py
backend/showme/engine/data/: backup_sources.py  market_cache.py  market_data.py  market_store.py  ws_manager.py
backend/showme/engine/indicators/: adx_di.py  atr_filter.py  base.py  bollinger.py  cci.py  cvd.py  ema_cross.py  funding_rate.py  heikin_ashi.py  ichimoku.py  keltner.py  liquidation_pressure.py  macd.py  mfi.py  obv.py  open_interest.py  psar.py  roc.py  rsi.py  sma_cross.py  stochastic.py  supertrend.py  vwap.py  williams_r.py
backend/showme/engine/monitoring/: log_reader.py  metrics.py  status_exporter.py
backend/showme/engine/services/: tca.py  (+34 more)
backend/showme/integrations/: github.py  hf.py
backend/showme/manifest/: __init__.py  enums.py  registry.py  spec.py
backend/showme/providers/: __init__.py  _http.py  base.py  binance.py  fred.py  gdelt.py  openfigi.py  registry.py  rss_news.py  sec_edgar.py  seed_register.py  seed_register_batch2.py  treasury_direct.py  yfinance_adapter.py
backend/showme/server_routes/: __init__.py  _agent_runtime.py  _models.py  _templates_dev_mount.py  agent.py  ask.py  assistant.py  bots.py  broker.py  exchange.py  function_index.py  health.py  indicators.py  instant.py  integrations.py  manifest.py  mis.py  portfolio.py  portfolio_aggregate.py  proxy.py  quote.py  scanner.py  state.py  strategies.py  templates.py  veryfinder.py  watchlists.py  websocket.py  xai.py
backend/showme/strategies/: backtest.py  compute.py  evaluate.py  sizing.py  spec.py  store.py
backend/showme/templates/: loader.py
backend/tests/: test_agents.py  test_alrt.py  test_analytical.py  test_asset_class_filter.py  test_assistant_parser.py  test_assistant_route.py  test_backtest_harness.py  test_binance_liquidation_formula.py  test_bl_posterior_formula.py  test_blak_live_fallback.py  test_bollinger_ddof.py  test_bot_record.py  test_bot_runner.py  test_bot_store.py  test_bots_feed.py  test_bots_route.py  test_brokers.py  test_btmm.py  test_bughunt_s01.py  test_bughunt_s02.py  test_bughunt_s10.py  test_cagr_realized.py  test_catalog_loader.py  test_catalog_regen.py  test_ccxt_broker.py  test_certifi_bundle.py  test_chart_history.py  test_cn.py  test_commission_pnl.py  test_compute.py  test_compute_indicators.py  test_credential_redaction.py  test_credential_store.py  test_decision_engine_autoclose.py  test_degarbage_bond_srsk.py  test_degarbage_bond_stubs.py  test_degarbage_commodity_cpf.py  test_degarbage_deriv_omon.py  test_degarbage_deriv_stubs.py  test_degarbage_equity_dark.py  (+149 more)
backend/tests/broker/: test_exec_validation.py  test_order_confirmation.py
backend/tests/derivative/: test_ivol_spot.py
backend/tests/equity/: test_fa_filing_date.py  test_wacc_beta_wiring.py
backend/tests/macro/: test_btmm_freshness.py  test_coun_dedup.py  test_ecfc_provider_unavailable.py  test_regime_classifier.py  test_wirp_dates.py
backend/tests/news/: test_news_bughunt_2026_05_24.py
backend/tests/portfolio/: test_blak_market_cap.py  test_symbols_string_parsing.py  test_tbv3_quarantine_leak.py
backend/tests/server/: test_enforce_live_or_label_synthetic.py
backend/tests/x/: test_bughunt_2026_05_24.py
src-py/: pyproject.toml  showme-backend.spec
src-py/showme/: __init__.py  chart_history.py  function_contracts.py  instant_line.py  quotes.py  scanner.py  server.py  state_api.py  streams.py  veryfinder_bridge.py
src-py/showme/agents/: orchestrator.py  planner.py  search.py  summarizer.py  viz.py
src-py/showme/brokers/: paper.py
src-py/tests/: test_agents.py  test_btmm.py  test_llm.py  test_news_intelligence.py  test_portfolio_state.py  test_quotes.py  test_server.py  test_state_api.py  test_streams.py  test_veryfinder_bridge.py  test_whal.py
tauri/: Cargo.toml  audit.toml  build.rs  entitlements.plist  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: biometric.rs  commands.rs  deeplink.rs  filesystem.rs  ipc.rs  lib.rs  menu.rs  notifications.rs  presets.rs  secrets.rs  sidecar.rs  tray.rs  window.rs
(+1284 files in other folders)
