[project]
name = "showme-backend"
version = "0.1.1"
description = "showMe backend sidecar — exposes the bundled 139-function engine through a localhost FastAPI server discovered by the Tauri shell."
requires-python = ">=3.11"
# Floors are pinned per SEC-10 to versions that include published security
# fixes (torch RCE via torch.load, transformers unsafe deserialization,
# requests cert-verify reuse, pydantic ReDoS via email-validator).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10.6",
    "httpx>=0.28",
    "requests>=2.32.4",
    "duckdb>=1.1",
    "polars>=1.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "websockets>=14",
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.55",
    "lxml>=5.3",
    "feedparser>=6.0",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0,<3",
    "transformers>=4.48,<6",
    "tokenizers>=0.20",
    "safetensors>=0.4",
    "ccxt>=4.4.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "pyinstaller>=6.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["showme*"]

[tool.ruff]
# Agent J 2026-05-23: engine/ is no longer wholesale ruff-exempt.
# Engine has ~410 .py files (TBV3 ports) that previously bypassed lint
# entirely. We bring it into scope but disable the noisiest rules in
# `[tool.ruff.lint.per-file-ignores]` below so adopting it stays a
# zero-pain operation. Specific rule curation can happen later.
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Engine is mass-ported numerical code from TBV3; we keep import order
# and unused-import warnings off there to avoid a mass-rewrite. The
# real `select`/`ignore` policy lives at the project default.
"showme/engine/**" = ["E501", "E701", "E702", "E731", "E741", "F401", "F403", "F405", "F811", "F841", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Agent J 2026-05-23: coverage tooling installed.
# Coverage gate enforced by CI (see .github/workflows/ci.yml); we keep
# `--cov-fail-under` off the default `addopts` so local pytest invocations
# don't fail on individual subsystem runs. CI applies the threshold.
addopts = "--cov=showme --cov-report=term-missing --cov-report=xml --cov-config=pyproject.toml"

[tool.coverage.run]
source = ["showme"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "showme/server_routes/__init__.py",
    "*/engine/*",
    "*/conftest.py",
    "showme/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
